# taco

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac
bindings/labview/client/: LabviewClient.cpp  Makefile.am  TacoSilvia.cpp  lv_menu.cpp  main.cpp
classes/powersupply/: Makefile.am
classes/serialline/: Makefile.am  SerialCmnds.res
ext/lib/: Makefile.am
lib/dbase/: Makefile.am  setacc_xdr.c
lib/dc/: Makefile.am
log4cpp/: Makefile.am  configure.ac  log4cpp.cfg  log4cpp.m4  log4cpp.spec.in
log4cpp/include/log4cpp/: PatternLayout.hh
log4cpp/m4/: AC_CREATE_PREFIX_CONFIG_H.m4  AC_CXX_HAVE_SSTREAM.m4  AC_C_INT64_T.m4  AC_FUNC_SNPRINTF.m4  PETI_PEDANTIC_GCC.m4  ac_config_libconfig_in.m4  ax_boost.m4  m4_ax_boost_base.m4
log4cpp/src/: AbortAppender.cpp  BasicLayout.cpp  FileAppender.cpp  IdsaAppender.cpp  LayoutsFactory.cpp  Makefile.am  NTEventLogAppender.cpp  PatternLayout.cpp  Priority.cpp  RollingFileAppender.cpp  SimpleLayout.cpp  SmtpAppender.cpp  Win32DebugAppender.cpp
log4cpp/tests/: Clock.cpp
taco/: .project  AUTHORS  ChangeLog  Makefile.am  Makefile.cvs  README  README-RPM  acinclude.m4  autogen.sh  configure.ac  rpm_rules.mh  taco.spec.in
taco/bindings/: Makefile.am
taco/bindings/labview/: Makefile.am
taco/bindings/python/: Makefile.am  Makefile.in  README  ResDatabase.py  TacoDevice.py  TacoServer.py  h2py  python.c  python.h  pythonP.h  server.c  taco.c  taco.h  taco_types.c
taco/bindings/tcl/: Makefile.am  convert.c  convert.h  db_io.h  db_io_debug.c  db_io_get.c  db_io_put.c  dc_io.h  dc_io_debug.c  dc_io_get.c  debug.c  debug.h  dev_free.c  dev_io.c  dev_io.h  dev_io_protocol.c  dev_io_timeout.c  tcltaco_ver.c  tcltacoapi_init.c
taco/classes/: Makefile.am
taco/classes/agps/: AGPowerSupply.c  AGPowerSupply.h  AGPowerSupplyP.h  Makefile.am  PowerSupply.c  PowerSupply.h  PowerSupplyP.h  ps_menu.c  startup.c
taco/classes/instverify/: Inst_verify.c  Inst_verify.h  Inst_verifyP.h  Inst_verify_menu.c  Makefile.am  startup.c
taco/classes/motor/: Makefile.am  TACOMotor.cpp  TACOMotor.h  TACOMotorCommon.h  TACOMotorWorker.cpp  TACOMotorWorker.h  startup.cpp
taco/classes/powersupply/: AGPowerSupply.cpp  AGPowerSupply.h  Makefile.am  PowerSupply.cpp  PowerSupply.h  README  ps_menu.cpp  startup.cpp
taco/classes/serialline/: Makefile.am  README  Serial.cpp  Serial.h  Serial.res  SerialErrors.res  startup.cpp
taco/classes/signal/: Makefile.am
taco/classes/updatedaemon/: MakeDP.c  Makefile.am  daemon.c  daemon.h  daemon_menu.c  daemon_xdr.c  daemon_xdr.h  datac.c  poller.c  startup.c  ud_server.h  ud_serverP.h
taco/debian/: README  changelog  control  rules  taco-dev.install  taco.dirs
taco/doc/: Doxyfile.in  Makefile.am  README  acknowledge.doc  agps_states.eps  basicsteps.doc  c.doc  class_hierarchy.eps  cmd_exe.eps  cplusplus.doc  database.doc  dsm_model.eps  events.doc  filewindow.eps  index.doc.in  install.doc  introduction.doc  labview.doc  procedure.dot  servwindow.eps  signal.doc  started.doc.in  taco.sty.in  taco_manual.tex.in  tacoarch.dot  tacodsm.eps  whatis.doc
taco/examples/: Makefile.am
taco/examples/helloworld/: Makefile.am  hello.c  helloP.h  helloworld.c  helloworld_async.c  startup.c
taco/ext/: ChangeLog  Makefile.am
taco/ext/client/: Makefile.am
taco/ext/common/: Makefile.am
taco/ext/doc/: Doxyfile  Makefile.am
taco/ext/include/: Makefile.am  TACOAdmin.h  TACOAdminCommands.h  TACOArgPutGet.h  TACOBasicCommands.h  TACOBasicErrors.h  TACOClient.h  TACOConverters.h  TACOException.h  TACOExtensions.h  TACOResources.h  TACOServer.h  TACOStates.h  TACOStringConverters.h  TACOTypes.h
taco/ext/lib/: Makefile.am
taco/ext/python/: Makefile.am  TACO.i  TACOClient.cpp  TACOClient.i  TACOPythonClient.cpp  TACOPythonClient.h  TACOPythonClientConverters.cpp  TACOPythonClientConverters.h  TACOStates.i  test.py
taco/ext/res/: Makefile.am  TACOBasicCommands.res  TACOBasicErrors.res
taco/gdbm/: AUTHORS  Makefile.am  autogen.sh  configure.ac  gdbm.proto  gdbm.texinfo  ndbm.h
taco/java/: Makefile
taco/lib/: API.h  API_xdr.h  API_xdr_vers3.h  Admin.h  ApiP.h  BlcDsNumbers.h  CntrlDsNumbers.h  DasDsNumbers.h  DevCcdCmds.h  DevCmds.h  DevErrors.h  DevSec.h  DevServer.c  DevServer.h  DevServerMain.c  DevServerP.h  DevServerSig.c  DevServerSignal.c  DevSignal.h  DevStates.h  DevXdrKernel.c  DevXdrKernel.h  Device.C  Device.H  Device.cpp  Device.h  DeviceBase.h  DeviceFRM.C  DeviceFRM.H  DeviceFRM.cpp  DeviceFRM.h  Doxyfile  Doxyfile.in  DserverTeams.h  ExpDsNumbers.h  Frm2DsNumbers.h  MachDsNumbers.h  Makefile.am  NT_debug.c  NT_debug.h  (+66 more)
taco/log4cpp/: ChangeLog  Makefile.am  autogen.sh  configure.in  log4cpp-config.in
taco/m4/: Makefile.am  acextra.m4  acfindfile.m4  acprogpython.m4  acprogswig.m4  acqt.m4  actcl.m4  am_rpm_init.m4  ax_python.m4  ax_python_devel.m4  extra.m4  python.m4  qt.m4  rpm.m4  swig.m4  taco.m4  tacoext.m4  tcl.m4
taco/misc/: .taco.csh  .taco.csh.in  .taco_env  .taco_env.in  Makefile.am  agps.shutdown  agps.startup  dc.SuSE.in  instverify.shutdown  instverify.startup  off  taco  taco-client++.pc.in  taco-client.pc.in  taco-config.in  taco-dc.sh.in  taco-manager.sh.in  taco-server++.pc.in  taco-server.pc.in  taco.SuSE.in  taco.debian.in  taco.in  taco.shutdown  taco.shutdown.in  taco.startup.in  taco.startup.sec.in  taco.status.in  taco_freebsd.sh.in  taco_log.cfg  taco_log.cfg.in  tacoenv.csh.in  tacoenv.sh.in
taco/system/: Makefile.am
taco/tests/: ExtServerClient.cpp  Makefile.am  TestExtClient2.cpp  TestExtServer.cpp  TestExtServer.h  TestExtServerStartup.cpp  atconfig  atlocal.in  check-agps  check-dbm  check-dbservinfo  check-dbupdate  check-inst-verify  cleanup.at  db_analyze.cpp  db_connect.cpp  db_devdomain.cpp  db_devexp.cpp  db_devfamily.cpp  db_devlist.cpp  db_devmember.cpp  db_devperslist.cpp  db_dsonhost.cpp  db_getdevexp.cpp  db_getres.cpp  db_getresoval.cpp  db_hostlist.cpp  db_reconnect.cpp  db_resdomain.cpp  db_resfamily.cpp  db_resget.cpp  db_resmember.cpp  db_resput.cpp  db_serverlist.cpp  dbase.at  dev_family  dev_ping.c  devices.at  ext.at  fail.res  (+56 more)
(+924 files in other folders)
